--- a/css/site.css
+++ b/css/site.css
@@ -23,7 +23,7 @@ h2 {
 
 img {
     margin: 0 auto;
-    width: 200px;
+    max-width: 200px;
 }
 
 p {
@@ -55,5 +55,23 @@ button {
 .header-buttons {
     text-align: right;
     margin: 10px 0px;
+}
+
+.contacts {
+    text-align: center;
+}
+
+.contact a {
+    display: block;
+}
+
+.contact {
+    display: inline-block;
+    margin: 8px;
+}
+
+.contact p {
+    text-indent: 0px;
+    text-align: center;
 }
 
