--- a/css/site.css
+++ b/css/site.css
@@ -3,10 +3,6 @@ body {
     font-size: 14pt;
 }
 
-/*.container {
-    max-width: 800px;
-}*/
-
 h1 {
     text-align: center;
 }
@@ -79,6 +75,11 @@ button {
     padding-top: 51px;
 }
 
+.main-page-container {
+  max-width: 800px;
+  margin-top: 20px;
+}
+
 /* Toggle Styles */
 
 #wrapper {
@@ -91,6 +92,14 @@ button {
 
 #wrapper.toggled {
     padding-left: 250px;
+}
+
+.sidebar-menu {
+  margin-top: 20px;
+}
+
+.sidebar-menu-title {
+  padding-left: 25px;
 }
 
 #sidebar-wrapper {
@@ -151,7 +160,10 @@ button {
     background: rgba(255,255,255,0.2);
 }
 
-.sidebar-nav li a:active,
+.sidebar-nav li a:active{
+    text-decoration: none;
+}
+
 .sidebar-nav li a:focus {
     text-decoration: none;
 }
@@ -274,4 +286,21 @@ a.hover {
     margin-left: auto;
     margin-right: auto; 
     text-align: center;
+}
+
+a {
+  color: black;
+  text-decoration: underline;
+}
+
+.text-decoration-none {
+  text-decoration: none;
+}
+
+.text-decoration-none:hover {
+  text-decoration: none;
+}
+
+.language {
+  font-size: small;
 }
